Coshx San Francisco address update

--- a/app/views/home/_maps.html.haml
+++ b/app/views/home/_maps.html.haml
@@ -16,6 +16,6 @@
   .six.columns
     %h5 SAN FRANCISCO
     %p.graytext Our residence in San Francisco
-    %a{:target => '_blank', :href => "https://maps.google.com/maps?q=1211+Folsom+Street,+San+Francisco,+CA&hl=en&ll=37.774497,-122.409346&spn=0.009176,0.01929&sll=37.780968,-122.395597&sspn=0.120207,0.264187&oq=1211+folsom+street&hnear=1211+Folsom+St,+San+Francisco,+California+94103&t=m&view=map&z=16"}
+    %a{:target => '_blank', :href => "https://maps.google.com/maps?q=972+mission+street&ie=UTF-8&hq=&hnear=0x808580843dfd203b:0x7a8e975abf04adee,972+Mission+St,+San+Francisco,+CA+94103&gl=us&ei=xTFmUMrcN4joigKG2oCgAw&ved=0CCAQ8gEwAA"}
       =image_tag("map_sf.png")
-    %p.graytext 1211 Folsom Street, 3rd Floor, San Francisco, CA 94103
+    %p.graytext 972 Mission Street, 5rd Floor, San Francisco, CA 94103
