Walt pic update

--- a/app/views/jobs/_jobs.html.haml
+++ b/app/views/jobs/_jobs.html.haml
@@ -1,5 +1,6 @@
 #jobs.reveal-modal
   %h2 We don't have any job offerings right now
   %p But will keep you updated!
+  %p Even though there aren't any jobs, please <a href="mailto:jobs@coshx.com">email</a> us your resume. Things change everyday.
   %a.close-reveal-modal &#215;
 
