tweaking a tiny bug

--- a/app/views/home/_maps.html.haml
+++ b/app/views/home/_maps.html.haml
@@ -18,4 +18,4 @@
     %p.graytext Our residence in San Francisco
     %a{:target => '_blank', :href => "https://maps.google.com/maps?q=972+mission+street&ie=UTF-8&hq=&hnear=0x808580843dfd203b:0x7a8e975abf04adee,972+Mission+St,+San+Francisco,+CA+94103&gl=us&ei=xTFmUMrcN4joigKG2oCgAw&ved=0CCAQ8gEwAA"}
       =image_tag("map_sf.png")
-    %p.graytext 972 Mission Street, 5rd Floor, San Francisco, CA 94103
+    %p.graytext 972 Mission Street, 5th Floor, San Francisco, CA 94103
