--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -49,7 +49,7 @@
       .three.columns
         %strong San Francisco
         %br/
-        972 Mission Street, 5rd Floor
+        972 Mission Street, 5th Floor
         %br/
         San Francisco, CA 94103
         %br/
