no transition for chrome

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -84,7 +84,7 @@
   border-radius: 100px;
   border: 6px solid white;
 
-  -webkit-transition: all 0.3s ease-out; /* Safari 3.2+, Chrome */
+  //-webkit-transition: all 0.3s ease-out; /* Safari 3.2+, Chrome */
   -moz-transition: all 0.3s ease-out; /* Firefox 4-15 */
   -o-transition: all 0.3s ease-out; /* Opera 10.5–12.00 */
   transition: all 0.3s ease-out; /* Firefox 16+, Opera 12.50+ */
