--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -69,6 +69,25 @@ body {
   color: white;
 }
 
+div.dialog {
+        width: 25em;
+        padding: 0 4em;
+        margin: 4em auto 0 auto;
+        border: 2px solid #1688C3;
+        border-right-color: #1688C3;
+        border-bottom-color: #1688C3;
+        background-color: #fff; 
+        color: #666; 
+        text-align: center; 
+        font-family: arial, sans-serif;
+      }
+
+div.dialog h1 {
+        font-size: 18px;
+        }
+
+
+
 @media screen and (max-width: 450px) {
 
   ul#nav li {
