--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,8 +1,9 @@
-!!! 5
+!!!
 %html
   %head
     %title= "Coshx Labs #{yield(:title)}"
     %meta{:name => "google-site-verification", :content => "GG9HzTQhQZszRRYo-W_el_Dh1LQs-3SQOuCzZS88FvI"}
+    %meta{:charset => "UTF-8"}
     = render "layouts/fonts"
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
@@ -22,6 +23,3 @@
       %div#content.row
         = yield
     = render "layouts/footer"
-
-    
-
