--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -23,17 +23,17 @@
                   = link_to "Read more", post, :class => "read-more"
                   |
                   %a.comments{:href => "#{polymorphic_url(post)}#disqus_thread"}
-       
+
     .row
       %h2.star-header#footer-tweet
         %p Last tweets
         = link_to "https://www.twitter.com/coshxlabs", :class => "a-button darkblue" do
           Follow Us
-    
+
     %h2.contact-heading
       Shoot us an email at
       = link_to "info@coshx.com", "mailto:info@coshx.com"
-    %div.contact-details.row      
+    %div.contact-details.row
       .three.columns
         %strong Boulder
         %br/
@@ -53,7 +53,7 @@
         %br/
         San Francisco, CA 94103
         %br/
-        
+
       .three.columns
         CONSIDERING COSHX FOR
         %br/
@@ -68,7 +68,7 @@
         |
         %a{:href => about_path} About
         |
-        %a{:href => portfolio_path} Projects
+        %a{:href => projects_path} Projects
         |
         %a{:href => services_path} Services
         |
