--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -14,6 +14,7 @@ footer .the-button {
 
 footer .star-header {
   margin-top: 0px;
+  margin-bottom: 14px;
   border-top: 2px solid #1588C3;
   border-bottom: 1px solid #004264;
   font: bold 18px 'PT Sans', sans-serif;
